--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,4 @@ ctrlc = "3"
 scylla = { version = "1.1.0", features = ["rustls-023", "full-serialization"] }
 rustls = { version = "0.23", features = ["aws_lc_rs"] }
 anyhow = "1.0.70"
-num-bigint = "0.4.6"
-num-traits = "0.2.19"
+futures = "0.3.31"
