--- a/main-indexer/Cargo.toml
+++ b/main-indexer/Cargo.toml
@@ -22,7 +22,6 @@ borsh.workspace = true
 ctrlc.workspace = true
 scylla.workspace = true
 anyhow.workspace = true
-num-bigint.workspace = true
 rustls.workspace = true
-num-traits.workspace = true
+futures.workspace = true
 
