--- a/fastfs-sub-indexer/Cargo.toml
+++ b/fastfs-sub-indexer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "main-indexer"
-description = "Indexer for FastData. Collects raw blobs from the neardata and stores them into scylladb."
+name = "fastfs-sub-indexer"
+description = "Indexer for FastFS FastData standard."
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -9,16 +9,12 @@ license.workspace = true
 
 [dependencies]
 scylladb = { path = "../scylladb" }
+suffix-fetcher = { path = "../suffix-fetcher" }
 
 dotenv.workspace = true
 fastnear-primitives.workspace = true
-fastnear-neardata-fetcher.workspace = true
-reqwest.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 ctrlc.workspace = true
-scylla.workspace = true
 anyhow.workspace = true
-rustls.workspace = true
-futures.workspace = true
