--- a/suffix-fetcher/Cargo.toml
+++ b/suffix-fetcher/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "main-indexer"
-description = "Indexer for FastData. Collects raw blobs from the neardata and stores them into scylladb."
+name = "suffix-fetcher"
+description = "Common crate to fetch fastdata by suffix from scylladb"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -9,16 +9,11 @@ license.workspace = true
 
 [dependencies]
 scylladb = { path = "../scylladb" }
-
-dotenv.workspace = true
-fastnear-primitives.workspace = true
-fastnear-neardata-fetcher.workspace = true
-reqwest.workspace = true
 tokio.workspace = true
+fastnear-primitives.workspace = true
 tracing.workspace = true
-tracing-subscriber.workspace = true
-ctrlc.workspace = true
 scylla.workspace = true
 anyhow.workspace = true
 rustls.workspace = true
 futures.workspace = true
+
